
Changelog for 8.2.0

Collector:
    - support for command execution during sync

DB:
    - Ruby updated to 1.9.3-p194
    - utilities to restart the rcs services
    - configuration templates
    - evidence filters can now be saved for future reuse
    - not interesting evidence field are no more exported to connectors